--- a/LostPolygon.WinApiWrapper/LostPolygon.WinApiWrapper.csproj
+++ b/LostPolygon.WinApiWrapper/LostPolygon.WinApiWrapper.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Source\DwmApi.cs" />
+    <Compile Include="Source\Enums\MessageType.cs" />
     <Compile Include="Source\NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Kernel32.cs" />
@@ -73,8 +74,8 @@
     <Compile Include="Source\Structures\POINT.cs" />
     <Compile Include="Source\Structures\BLENDFUNCTION.cs" />
     <Compile Include="Source\User32.cs" />
-    <Compile Include="Source\Enums\MessageType.cs" />
-    <Compile Include="Source\Utilities\DecodeUtility.cs" />
+    <Compile Include="Source\Enums\VirtualKeyCode.cs" />
+    <Compile Include="Source\Utilities\TypeDecodeUtility.cs" />
     <Compile Include="Source\Utilities\BitUtility.cs" />
     <Compile Include="Source\WinApi.cs" />
   </ItemGroup>
